--- a/app/src/main/res/layout/fragment.xml
+++ b/app/src/main/res/layout/fragment.xml
@@ -13,14 +13,14 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@{viewModel.secondNumber}">
+        android:background="@{viewModel.fourthNumber.value}">
 
         <TextView
             android:id="@+id/hello_world"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@{`Fragment\n` + viewModel.firstNumber + `\n` + viewModel.secondNumber}"
+            android:text="@{`Fragment\n` + viewModel.firstNumber.value + `\n` + viewModel.secondNumber.value + `\n` + viewModel.thirdNumber.value + `\n` + viewModel.fourthNumber.value}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
