--- a/app/src/main/res/layout/fragment.xml
+++ b/app/src/main/res/layout/fragment.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@{`Fragment\n` + viewModel.firstNumber.value + `\n` + viewModel.secondNumber.value + `\n` + viewModel.thirdNumber.value + `\n` + viewModel.fourthNumber.value}"
+            android:text="@{`Fragment\n` + viewModel.firstNumber.value + `\n` + viewModel.secondNumber.value + `\n` + viewModel.thirdNumber.value + `\n` + viewModel.fourthNumber.value + `\n` + viewModel.fifthNumber.value + `\n` + viewModel.sixthNumber.value}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
