--- a/app/src/main/res/layout/activity.xml
+++ b/app/src/main/res/layout/activity.xml
@@ -1,57 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="viewModel"
-            type="com.generalbytes.myapplication.vm.ActivityViewModel" />
+            type="com.generalbytes.myapplication.vm.activity.ActivityViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".activity.FirstActivity">
 
-        <TextView
-            android:gravity="center"
-            android:id="@+id/hello_world"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline1"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.33" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline01"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.33" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline02"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.66" />
+
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.text}"
-            app:layout_constraintBottom_toTopOf="@+id/fragments"
+            android:onClick="@{(view) -> viewModel.stickyHandler.invoke()}"
+            android:text="01"
+            app:layout_constraintBottom_toBottomOf="@id/guideline1"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/guideline01"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{(view) -> viewModel.processHandler.invoke()}"
+            android:text="02"
+            app:layout_constraintBottom_toBottomOf="@id/guideline1"
+            app:layout_constraintLeft_toRightOf="@id/guideline01"
+            app:layout_constraintRight_toLeftOf="@id/guideline02"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{(view) -> viewModel.messengerHandler.invoke()}"
+            android:text="03"
+            app:layout_constraintBottom_toBottomOf="@id/guideline1"
+            app:layout_constraintLeft_toRightOf="@id/guideline02"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/fragments"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent">
 
-            <fragment
-                android:name="com.generalbytes.myapplication.fragment.FirstFragment"
-                android:layout_width="match_parent"
-                android:layout_height="100dp" />
-            <fragment
-                android:name="com.generalbytes.myapplication.fragment.FirstFragment"
-                android:layout_width="match_parent"
-                android:layout_height="100dp" />
+        <fragment
+            android:id="@+id/fragment1"
+            android:name="com.generalbytes.myapplication.fragment.FirstFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/guideline01"
+            app:layout_constraintTop_toTopOf="@id/guideline1" />
 
-            <fragment
-                android:name="com.generalbytes.myapplication.fragment.SecondFragment"
-                android:layout_width="match_parent"
-                android:layout_height="100dp" />
-            <fragment
-                android:name="com.generalbytes.myapplication.fragment.SecondFragment"
-                android:layout_width="match_parent"
-                android:layout_height="100dp" />
-        </LinearLayout>
+        <fragment
+            android:id="@+id/fragment2"
+            android:name="com.generalbytes.myapplication.fragment.SecondFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/guideline01"
+            app:layout_constraintRight_toLeftOf="@id/guideline02"
+            app:layout_constraintTop_toTopOf="@id/guideline1" />
 
-
+        <fragment
+            android:id="@+id/fragment3"
+            android:name="com.generalbytes.myapplication.fragment.ThirdFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/guideline02"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
