--- a/app/src/main/res/layout/activity.xml
+++ b/app/src/main/res/layout/activity.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="@{(view) -> viewModel.stickyHandler.invoke()}"
-            android:text="01"
+            android:text="Service 01"
             app:layout_constraintBottom_toBottomOf="@id/guideline1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/guideline01"
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="@{(view) -> viewModel.processHandler.invoke()}"
-            android:text="02"
+            android:text="Service 02"
             app:layout_constraintBottom_toBottomOf="@id/guideline1"
             app:layout_constraintLeft_toRightOf="@id/guideline01"
             app:layout_constraintRight_toLeftOf="@id/guideline02"
@@ -61,14 +61,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="@{(view) -> viewModel.messengerHandler.invoke()}"
-            android:text="03"
+            android:text="Service 03"
             app:layout_constraintBottom_toBottomOf="@id/guideline1"
             app:layout_constraintLeft_toRightOf="@id/guideline02"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
         <fragment
+            android:layout_margin="5dp"
             android:id="@+id/fragment1"
             android:name="com.generalbytes.myapplication.fragment.FirstFragment"
             android:layout_width="0dp"
@@ -79,6 +79,7 @@
             app:layout_constraintTop_toTopOf="@id/guideline1" />
 
         <fragment
+            android:layout_margin="5dp"
             android:id="@+id/fragment2"
             android:name="com.generalbytes.myapplication.fragment.SecondFragment"
             android:layout_width="0dp"
@@ -89,6 +90,7 @@
             app:layout_constraintTop_toTopOf="@id/guideline1" />
 
         <fragment
+            android:layout_margin="5dp"
             android:id="@+id/fragment3"
             android:name="com.generalbytes.myapplication.fragment.ThirdFragment"
             android:layout_width="0dp"
