--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -16,15 +16,38 @@
         android:background="@{viewModel.serviceViewModel.running ? @color/green : @color/red }">
 
         <TextView
-            android:id="@+id/hello_world"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Fragment 3"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="Fragment 1"
+            app:layout_constraintBottom_toTopOf="@id/svc"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/svc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@{`Service value ` + viewModel.serviceViewModel.observableField}"
+            app:layout_constraintBottom_toTopOf="@id/api"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title" />
+
+        <TextView
+            android:id="@+id/api"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@{`API value ` + viewModel.apiValue}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/svc" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
