--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Fragment 1"
+            android:text="@{`Fragment 3\nViewModel\n` + viewModel.toString().substring(viewModel.toString().indexOf('@'))}"
             app:layout_constraintBottom_toTopOf="@id/svc"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
