--- a/app/src/main/res/layout/activity.xml
+++ b/app/src/main/res/layout/activity.xml
@@ -46,7 +46,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{`Activity\nViewModel\n` + viewModel.toString().substring(viewModel.toString().indexOf('@'))}"
+            android:text="@{`Activity ViewModel ` + viewModel.toString().substring(viewModel.toString().indexOf('@'))}"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="@id/guideline2"
             app:layout_constraintLeft_toLeftOf="parent"
