--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activity.FirstActivity">
 
     <data>
 
@@ -12,8 +13,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".activity.FirstActivity">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline1"
@@ -27,7 +27,7 @@
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.165"/>
+            app:layout_constraintGuide_percent="0.165" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline01"
@@ -46,8 +46,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{`Activity ViewModel ` + viewModel.toString().substring(viewModel.toString().indexOf('@'))}"
             android:gravity="center"
+            android:text="@{`Activity ViewModel ` + viewModel.toString().substring(viewModel.toString().indexOf('@'))}"
             app:layout_constraintBottom_toBottomOf="@id/guideline2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -101,7 +101,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/guideline01"
-            app:layout_constraintTop_toTopOf="@id/guideline1" />
+            app:layout_constraintTop_toTopOf="@id/guideline1"
+            tools:layout="@layout/fragment_first"/>
 
         <fragment
             android:id="@+id/fragment2"
@@ -112,7 +113,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/guideline01"
             app:layout_constraintRight_toLeftOf="@id/guideline02"
-            app:layout_constraintTop_toTopOf="@id/guideline1" />
+            app:layout_constraintTop_toTopOf="@id/guideline1"
+            tools:layout="@layout/fragment_second"/>
 
         <fragment
             android:id="@+id/fragment3"
@@ -123,6 +125,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/guideline02"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/guideline1" />
+            app:layout_constraintTop_toTopOf="@id/guideline1"
+            tools:layout="@layout/fragment_third"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
